Feat: Add remaining cards
Minorly refactor Board getters and setters for new cards.